comment out local testing parameters

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
     build: 
       dockerfile: dockerfile
       context: ./
-    depends_on:
-      - postgres
+    # depends_on:
+      # - postgres
     environment:
-      DATABASE_URL: postgres://pguser:pass@postgres:5432/students
+      # DATABASE_URL: postgres://pguser:pass@postgres:5432/students
       NODE_ENV: production
       PORT: 4000
       DBUSER: pguser
