--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,11 +9,17 @@ services:
       # - postgres
     environment:
       # DATABASE_URL: postgres://pguser:pass@postgres:5432/students
+      DBHOST: $DBHOST
       NODE_ENV: production
       PORT: 4000
-      DBUSER: pguser
-      DBPASS: pass
+      DBUSER: $DBUSER
+      DBPASS: $DBPASS
       POSTGRES_DB: students
+    logging:
+      driver: awslogs
+      options:
+        awslogs-region: us-east-1
+        awslogs-group: sreTestApp
     volumes:
       - .:/app/
       - /app/node_modules
@@ -27,8 +33,13 @@ services:
     volumes_from:
       - app
     ports:
-     - 4000:80
-
+     #- 4000:80
+     - 80:80
+    logging:
+      driver: awslogs
+      options:
+        awslogs-region: us-east-1
+        awslogs-group: sreTestApp
   # Local dev
   # postgres:
   #   image: postgres:11
