update launch to create env file. update compose with container for seeding postgres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,7 @@ services:
     build: 
       dockerfile: dockerfile
       context: ./
-    # depends_on:
-      # - postgres
     environment:
-      # DATABASE_URL: postgres://pguser:pass@postgres:5432/students
       DBHOST: $DBHOST
       NODE_ENV: production
       PORT: 4000
@@ -33,24 +30,17 @@ services:
     volumes_from:
       - app
     ports:
-     #- 4000:80
      - 80:80
     logging:
       driver: awslogs
       options:
         awslogs-region: us-east-1
         awslogs-group: sreTestApp
-  # Local dev
-  # postgres:
-  #   image: postgres:11
-  #   ports:
-  #     - "35432:5432"
-  #   environment:
-  #     POSTGRES_USER: pguser
-  #     POSTGRES_PASSWORD: pass
-  #     POSTGRES_DB: students
-  #   volumes: 
-  #     - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
+  # For seeding postgres
+  postgres:
+    image: postgres:14
+    ports:
+      - "35432:5432"
 
 networks:
   default:
