--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,17 +30,19 @@ services:
     volumes_from:
       - app
     ports:
+     #- 4000:80
      - 80:80
     logging:
       driver: awslogs
       options:
         awslogs-region: us-east-1
         awslogs-group: sreTestApp
-  # For seeding postgres
+  # seed postgres
   postgres:
     image: postgres:14
-    ports:
-      - "35432:5432"
+    environment:
+      DBUSER: user
+      DBPASS: pass
 
 networks:
   default:
