--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,19 +30,23 @@ services:
     volumes_from:
       - app
     ports:
-     #- 4000:80
      - 80:80
     logging:
       driver: awslogs
       options:
         awslogs-region: us-east-1
         awslogs-group: sreTestApp
-  # seed postgres
+  # For seeding postgres
   postgres:
     image: postgres:14
+    ports:
+      - "35432:5432"
     environment:
-      DBUSER: user
-      DBPASS: pass
+      POSTGRES_USER: pguser
+      POSTGRES_PASSWORD: pass
+      POSTGRES_DB: students
+    # volumes: 
+    #   - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
 
 networks:
   default:
